[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.18", features = ["derive"] }
once_cell = "1.19.0"
regex = "1.10.5"
argon2 = "0.5.3"
jsonwebtoken = "9"
chrono = { version = "0.4.38", features = ["serde"] }
cookie = "0.18.1"

[dependencies.rocket]
version = "0.5.1"
features = ["json"]


[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_postgres"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["macros", "chrono"]

