[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18", features = ["derive"] }
once_cell = "1.19.0"
regex = "1.10.5"
argon2 = "0.5.3"
jsonwebtoken = "9"
chrono = { version = "0.4.38", features = ["serde"] }
cookie = "0.18.1"
ws = { package = "rocket_ws", version = "0.1.1" }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.51.0"
tokio = {version = "1.40.0", features = ["full"] }

[dependencies.rocket]
version = "0.5.1"
features = ["json"]


[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_postgres"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["macros", "chrono"]

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
